# damn-small-text-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: router.py
app/api/v1/: loaded_models.py  models.py  text_generations.py
app/db/: models.py  session.py
app/enums/: generation_status.py
app/schemas/: generation.py  llm_model.py
app/services/: llm_models_registry.py  llm_provider.py  llm_providers.py
app/workers/: celery_app.py  tasks.py
migrations/versions/: 0d842a727b12_add_text_column_to_generations_table.py  1921fa9fb20e_make_text_column_nullable_in_generations.py  19669a280d3f_add_message_column_to_generations_table.py  4334015aa100_add_generation_params_and_rename_text_.py  5e904d89fea0_create_table_generations.py  d81074bf4707_add_prompt_and_model_name_columns_to_.py
